// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots Subheading: 0 1`] = `
<h3
  className="typography_3-0-1-10 subheading-0-1-1 subheading_1-0-1-2"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 1 1`] = `
<h1
  className="typography_3-0-1-26 subheading-0-1-17 subheading_1-0-1-18"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 2 1`] = `
<h1
  className="typography_3-0-1-42 subheading-0-1-33 subheading_1-0-1-34"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 3 1`] = `
<h2
  className="typography_4-0-1-59 subheading-0-1-49 subheading_2-0-1-51"
  data-sketch-symbol="Subheading 2"
>
  Subheading test string
</h2>
`;

exports[`generate snapshots Subheading: 4 1`] = `
<h3
  className="typography_5-0-1-76 subheading-0-1-65 subheading_3-0-1-68"
  data-sketch-symbol="Subheading 3"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 5 1`] = `
<h4
  className="typography_6-0-1-93 subheading-0-1-81 subheading_4-0-1-85"
  data-sketch-symbol="Subheading 4"
>
  Subheading test string
</h4>
`;

exports[`generate snapshots Subheading: 6 1`] = `
<h5
  className="typography_7-0-1-110 subheading-0-1-97 subheading_5-0-1-102"
  data-sketch-symbol="Subheading 5"
>
  Subheading test string
</h5>
`;

exports[`generate snapshots Subheading: 7 1`] = `
<h6
  className="typography_8-0-1-127 subheading-0-1-113 subheading_6-0-1-119"
  data-sketch-symbol="Subheading 6"
>
  Subheading test string
</h6>
`;
